--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,29 @@
-build
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dev-debug.log
 
-_deps
+# Dependency directories
+node_modules/
 
-qcustomplot
-qxlsx
+# Environment variables
+.env
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS specific
+.DS_Store
+
+# Task files
+tasks.json
+tasks/ 
