--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
     "antd": "^5.26.0",
+    "echarts": "^5.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "three": "^0.177.0"
