--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,3 +12,6 @@ python-multipart==0.0.9
 email-validator==2.1.0.post1
 python-slugify==8.0.1
 uv==0.1.14
+pandas==2.2.0
+openpyxl==3.1.2
+numpy==1.26.3
